// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModifiersAndExtrasFormService createProductComponent$ should create product component 1`] = `
Object {
  "data": Object {
    "allergens": Array [
      "egg",
      "gluten",
      "milk",
      "soya",
      "peanut",
    ],
    "createdAt": Any<String>,
    "deletedAt": null,
    "description": "DESCRIPTION",
    "dirty": null,
    "externalId": null,
    "id": "test_ADMIN_PRODUCT_COMPONENT_IT_COMP_01",
    "name": Object {
      "de": "PRODUCT_COMPONENT",
      "en": "PRODUCT_COMPONENT",
      "hu": "TERMEK_KOMPONENS",
    },
    "ownerEntity": "ownerEntity",
    "updatedAt": Any<String>,
  },
  "type": "insert",
}
`;

exports[`ModifiersAndExtrasFormService createProductComponentFormGroup should create form group 1`] = `
Object {
  "allergens": Array [],
  "description": "",
  "name": Object {
    "de": "",
    "en": "",
    "hu": "",
  },
  "ownerEntity": "",
  "soldOut": false,
}
`;

exports[`ModifiersAndExtrasFormService createProductComponentSet$ should create product component set 1`] = `
Object {
  "data": Object {
    "createdAt": Any<String>,
    "deletedAt": null,
    "description": "DESCRIPTION",
    "dirty": null,
    "externalId": null,
    "id": "test_ADMIN_PRODUCT_COMPONENT_SET_IT_COMP_SET_01",
    "items": Array [],
    "maxSelection": 0,
    "name": Object {
      "de": "COMPONENT_SET",
      "en": "COMPONENT_SET",
      "hu": "KOMPONENS_SET",
    },
    "ownerEntity": "ownerEntity",
    "supportedServingModes": null,
    "type": "extras",
    "updatedAt": Any<String>,
  },
  "type": "insert",
}
`;

exports[`ModifiersAndExtrasFormService updateProductComponent$ should update product component 1`] = `
Object {
  "data": Object {
    "allergens": Array [
      "egg",
      "gluten",
      "milk",
      "soya",
      "peanut",
    ],
    "createdAt": Any<String>,
    "deletedAt": null,
    "description": "DESCRIPTION",
    "dirty": null,
    "externalId": null,
    "id": "test_ADMIN_PRODUCT_COMPONENT_IT_COMP_01",
    "name": Object {
      "de": "PRODUCT_COMPONENT",
      "en": "PRODUCT_COMPONENT",
      "hu": "TERMEK_KOMPONENS",
    },
    "ownerEntity": "ownerEntity MOD",
    "updatedAt": Any<String>,
  },
  "type": "update",
}
`;

exports[`ModifiersAndExtrasFormService updateProductComponentSet$ should update product component set 1`] = `
Object {
  "data": Object {
    "createdAt": Any<String>,
    "deletedAt": null,
    "description": "DESCRIPTION",
    "dirty": null,
    "externalId": null,
    "id": "test_ADMIN_PRODUCT_COMPONENT_SET_IT_COMP_SET_01",
    "items": Array [],
    "maxSelection": 0,
    "name": Object {
      "de": "COMPONENT_SET",
      "en": "COMPONENT_SET",
      "hu": "KOMPONENS_SET",
    },
    "ownerEntity": "ownerEntity MOD",
    "supportedServingModes": null,
    "type": "extras",
    "updatedAt": Any<String>,
  },
  "type": "update",
}
`;
